--- a/sesion1/index.html
+++ b/sesion1/index.html
@@ -19,7 +19,7 @@
         </section>
         <section>
             <button id="sum-button">+</button>
-            <button id="rest-button">-</button>
+            <button id="minus-button">-</button>
             <button id="div-button">/</button>
             <button id="mul-button">*</button>
         </section>
