[add] formatted division

--- a/sesion02/src/index.html
+++ b/sesion02/src/index.html
@@ -8,7 +8,13 @@
     <title>Todo list</title>
 </head>
 <body>
-    <h1>Todo list</h1>
+    <h1>Sesion 02</h1>
+    <section id="ejercicio01">
+        <h2>número formateado</h2>
+        <input type="text" id="n1"> / 
+        <input type="text" id="n2">
+        <button>calcular</button>
+    </section>
     <script src="js/index.js"></script>
 </body>
 </html>
