[update] sesion 2 css

--- a/sesion02/src/index.html
+++ b/sesion02/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,49 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Todo list</title>
 </head>
+
 <body>
     <h1>Sesion 02</h1>
     <section id="ejercicio01">
         <h2>número formateado</h2>
-        <input type="text" id="n1"> / 
+        <input type="text" id="n1"> /
         <input type="text" id="n2">
         <button>calcular</button>
     </section>
+    <section id="ejercicio02">
+        <div>
+            <p>
+                Tiramisu jelly beans liquorice gingerbread. Cheesecake chocolate chocolate bonbon fruitcake chupa chups.
+                Lemon drops cotton candy candy candy muffin liquorice candy canes bear claw carrot cake. Gummi bears
+                soufflé
+                cotton candy sweet liquorice candy canes. Jelly-o chocolate muffin bonbon cookie muffin tiramisu muffin.
+                Cheesecake soufflé jujubes lollipop liquorice chocolate bar jujubes lollipop. Bonbon cupcake dessert
+                tiramisu gummies jujubes jujubes. Wafer jujubes soufflé. Tootsie roll danish donut tart. Lemon drops
+                marzipan halvah biscuit toffee. Tart jelly-o tiramisu bonbon. Wafer tart jujubes donut oat cake.
+                Chocolate
+                cake sesame snaps cake.
+            </p>
+            <p>
+                Liquorice gummies icing icing macaroon. Cake marshmallow muffin donut cupcake dessert. Cotton candy
+                pudding
+                carrot cake gummi bears donut cotton candy croissant topping dessert. Gummi bears wafer wafer jelly-o.
+                Cookie dessert dragée donut candy canes candy. Candy canes tootsie roll candy liquorice. Marzipan bear
+                claw
+                gingerbread. Jelly-o marzipan chupa chups. Topping tiramisu marshmallow chocolate. Pudding halvah
+                jelly-o
+                marzipan. Jujubes jelly gummies cookie pastry macaroon halvah. Pastry danish icing liquorice apple pie
+                cheesecake. Cake chocolate bar liquorice.
+            </p>
+        </div>
+    </section>
+    <section id="ejercicio03">
+        <div>
+            <p>
+                texto de prueba
+            </p>
+        </div>
+    </section>
     <script src="js/index.js"></script>
 </body>
+
 </html>
