[update] to complete exercise

--- a/sesion03/src/index.html
+++ b/sesion03/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Todo List</title>
 </head>
+
 <body>
     <div class="container">
         <p>
@@ -20,8 +22,9 @@
             <li>
                 <input type="checkbox">
                 <label>Aprender JS</label>
-                <button>Edit</button>
-                <button>Delete</button>
+                <input type="text" />
+                <button class="edit">Edit</button>
+                <button class="delete">Delete</button>
             </li>
         </ul>
 
@@ -30,11 +33,13 @@
             <li>
                 <input type="checkbox">
                 <label>Aprender lógica computacional</label>
-                <button>Edit</button>
-                <button>Delete</button>
+                <input type="text" />
+                <button class="edit">Edit</button>
+                <button class="delete">Delete</button>
             </li>
         </ul>
     </div>
     <script src="js/index.js"></script>
 </body>
+
 </html>
