[chg] clean for tag

--- a/sesion03/src/index.html
+++ b/sesion03/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <p>
-            <label for="">Add item</label>
+            <label>TODO list</label>
             <input type="text">
             <button>Add</button>
         </p>
