[add] sass configuration

--- a/sesion04/src/index.html
+++ b/sesion04/src/index.html
@@ -7,10 +7,24 @@
     <title>First webpack project</title>
 </head>
 <body>
-    <h1>Webpack project</h1>
-    <div class="container">
-        <section>Section 1</section>
-        <section>Section 2</section>
-    </div>
+    <div id="bg"></div>
+    <header>
+        <a href="https://www.certificatic.org/">CertificaTIC</a>
+    </header>
+    <main>
+        <section id="card">
+            <ul>
+                <li><span></span><strong>FullStack Developer</strong></li>
+                <li><span></span><strong>Java & JS dev</strong></li>
+                <li><span></span><strong>Cloud Enthusiast</strong></li>
+                <li><span></span><strong>Entrepreneur</strong></li>
+            </ul>
+        </section>
+        <section id="primary">
+            <h1>Ethien Salinas</h1>
+            <p>Java & JavaScript Architech</p>
+            <a href="">I want to be contected</a>
+        </section>
+    </main>
 </body>
 </html>
