[add] grid layout

--- a/sesion04/css-grid-layout/src/index.html
+++ b/sesion04/css-grid-layout/src/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Grid Layout</h1>
+    <div class="container-1">
+        <header>Header</header>
+        <aside>Aside 1</aside>
+        <aside>Aside 2</aside>
+        <section>Section 1</section>
+        <section>Section 2</section>
+        <footer>Footer</footer>
+    </div>
+    <div class="container-2">
+        <header>Header</header>
+        <aside>Side-bar</aside>
+        <main>Aside 2</main>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
