[init] bulma project login

--- a/sesion05/1-starting-with-bulma/src/index.html
+++ b/sesion05/1-starting-with-bulma/src/index.html
@@ -1,12 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Starting with bulma</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Stating with Bulma</title>
 </head>
 <body>
-    <h1> <i class="fas fa-angle-double-right"></i> Starting with bulma</h1>
+  <div class="container">
+  <div class="container">
+    <!-- Heading -->
+    <div class="block">
+      <h1 class="title">Título de página</h1>
+      <h2 class="subtitle">Subtítulo de página</h2>
+    </div>
+    <div class="block">
+      <h2 class="title is-1">Encabezado 1</h2>
+      <h2 class="title is-2">Encabezado 2</h2>
+      <h2 class="title is-3">Encabezado 3</h2>
+      <h2 class="title is-4">Encabezado 4</h2>
+      <h2 class="title is-5">Encabezado 5</h2>
+      <h2 class="title is-6">Encabezado 6</h2>
+    </div>
+
+    <!-- Content -->
+    <div class="block">
+      <p class="content is-small">
+        Icing marshmallow tiramisu muffin cake bonbon. Brownie tart soufflé apple pie gummi bears. Wafer cupcake wafer
+        cake sesame snaps marshmallow liquorice oat cake chupa chups.
+      </p>
+      <p class="content is-medium">
+        Icing marshmallow tiramisu muffin cake bonbon. Brownie tart soufflé apple pie gummi bears. Wafer cupcake wafer
+        cake sesame snaps marshmallow liquorice oat cake chupa chups.
+      </p>
+      <p class="content is-large">
+        Icing marshmallow tiramisu muffin cake bonbon. Brownie tart soufflé apple pie gummi bears. Wafer cupcake wafer
+        cake sesame snaps marshmallow liquorice oat cake chupa chups.
+      </p>
+    </div>
+
+    <!-- Buttons -->
+    <div class="block">
+      <button class="button">Button</button>
+      <button class="button is-white">Button</button>
+      <button class="button is-light">Button</button>
+      <button class="button is-dark">Button</button>
+      <button class="button is-black">Button</button>
+      <button class="button is-link">Button</button>
+    </div>
+    <div class="block">
+      <button class="button">Button</button>
+      <button class="button is-primary">Button</button>
+      <button class="button is-info">Button</button>
+      <button class="button is-success">Button</button>
+      <button class="button is-warning">Button</button>
+      <button class="button is-danger">Button</button>
+      <button class="button is-loading">Button</button>
+    </div>
+
+    <!-- boxes -->
+    <div class="block">
+      <div class="box">
+        <h2 class="title">Hello World</h2>
+        <p>
+          Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+          cheesecake marzipan.
+        </p>
+      </div>
+    </div>
+
+    <!-- notifications -->
+    <div class="block">
+      <div class="notification">
+        <button class="delete"></button>
+        Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+        cheesecake marzipan.
+      </div>
+      <div class="notification is-primary">
+        <button class="delete"></button>
+        Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+        cheesecake marzipan.
+      </div>
+      <div class="notification is-info">
+        <button class="delete"></button>
+        Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+        cheesecake marzipan.
+      </div>
+      <div class="notification is-success">
+        <button class="delete"></button>
+        Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+        cheesecake marzipan.
+      </div>
+    </div>
+
+    <!-- tags -->
+    <div class="block">
+      <span class="tag">tag</span>
+      <span class="tag is-black">tag</span>
+      <span class="tag is-dark">tag</span>
+      <span class="tag is-primary">tag</span>
+      <span class="tag is-info is-medium">tag</span>
+      <span class="tag is-success is-large">tag</span>
+    </div>
+
+    <!-- messages -->
+    <div class="block">
+      <article class="message">
+        <div class="message-header">
+          <p>About us</p>
+        </div>
+        <div class="message-body">
+          Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+          cheesecake marzipan.
+        </div>
+      </article>
+      <article class="message is-primary">
+        <div class="message-header">
+          <p>About us</p>
+        </div>
+        <div class="message-body">
+          Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+          cheesecake marzipan.
+        </div>
+      </article>
+      <article class="message is-success">
+        <div class="message-header">
+          <p>About us</p>
+        </div>
+        <div class="message-body">
+          Dessert jelly-o dragée. Ice cream pie sesame snaps. Cotton candy oat cake oat cake. Oat cake icing bear claw
+          cheesecake marzipan.
+        </div>
+      </article>
+    </div>
+
+    <!-- navbar (TODO:revisar) -->
+    <div class="">
+      <nav class="nav">
+        <div class="nav-left">
+          <a href="" class="nav-item">
+            <h1 class="title is-4">Traversy Media</h1>
+          </a>
+        </div>
+
+        <div class="nav-center">
+          <a href="" class="nav-item">
+            <span class="icon">
+              <i class="fab fa-github"></i>
+            </span>
+          </a>
+          <a href="" class="nav-item">
+            <span class="icon">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </a>
+        </div>
+
+        <div class="nav-right nav-menu">
+          <a href="#" class="nav-item">Home</a>
+          <a href="#" class="nav-item">About Us</a>
+          <a href="#" class="nav-item">Contact</a>
+        </div>
+      </nav>
+    </div>
+
+    <div class="block">
+      <aside class="menu">
+        <p class="menu-label">Label 1</p>
+        <ul class="menu-list">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+        </ul>
+        <p class="menu-label">Label 2</p>
+        <ul class="menu-list">
+          <li><a href="" class="is-active">Link 4</a></li>
+          <li><a href="">Link 5</a></li>
+          <li>
+            <ul>
+              <li><a href="">Link 6</a></li>
+              <li><a href="">Link 7</a></li>
+              <li><a href="">Link 8</a></li>
+            </ul>
+          </li>
+        </ul>
+      </aside>
+    </div>
+
+    <!--hero-->
+    <div class="block">
+      <section class="hero">
+        <div class="hero-body">
+          <div class="container">
+            <h2 class="title">hero title</h2>
+            <h3 class="subtitle">hero subtitle</h3>
+          </div>
+        </div>
+      </section>
+      <section class="hero is-primary">
+        <div class="hero-body">
+          <div class="container">
+            <h2 class="title">hero title</h2>
+            <h3 class="subtitle">hero subtitle</h3>
+          </div>
+        </div>
+      </section>
+      <section class="hero is-success">
+        <div class="hero-body">
+          <div class="container">
+            <h2 class="title">hero title</h2>
+            <h3 class="subtitle">hero subtitle</h3>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!--card-->
+    <div class="block">
+      <div class="card">
+        <div class="card-content">
+          <p class="title">Titulo del card</p>
+        </div>
+        <footer class="card-footer">
+          <p class="card-footer-item">
+            <span>
+              <a href=""><i class="fab fa-github"></i> github</a>
+            </span>
+          </p>
+          <p class="card-footer-item">
+            <span>
+              <a href=""><i class="fab fa-facebook"></i> facebook</a>
+            </span>
+          </p>
+          <p class="card-footer-item">
+            <span>
+              <a href=""><i class="fab fa-twitter"></i> twitter</a>
+            </span>
+          </p>
+        </footer>
+      </div>
+    </div>
+
+    <!--level-->
+
+      <nav class="level">
+        <!--left-->
+        <div class="level-left">
+          <p class="level-item">All</p>
+          <p class="level-item">All</p>
+          <p class="level-item">All</p>
+        </div>
+        <!--right-->
+        <div class="level-right">
+          <div class="level-item">
+            <div class="field">
+              <p class="control">
+                <input type="text" placeholder="Search...">
+              </p>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <!--columns-->
+      <div class="block">
+        <div class="columns">
+          <div class="column">Column 1</div>
+          <div class="column">Column 2</div>
+          <div class="column">Column 3</div>
+        </div>
+      </div>
+      <div class="block">
+        <div class="columns">
+          <div class="column">Column 1</div>
+          <div class="column">Column 2</div>
+          <div class="column">
+            <div class="columns">
+              <div class="column">Column 2.1</div>
+              <div class="column">Column 2.2</div>
+              <div class="column">Column 2.3</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="block">
+        <div class="columns">
+          <div class="column is-three-quarters">Column 1</div>
+          <div class="column">auto</div>
+          <div class="column">auto</div>
+        </div>
+      </div>
+      <div class="block">
+        <div class="columns">
+          <div class="column column is-two-thirds">Column 1</div>
+          <div class="column">auto</div>
+          <div class="column">auto</div>
+        </div>
+      </div>
+
+  </div><!-- //container -->
 </body>
+
 </html>
