[add] summary, orders and most popular books

--- a/sesion05/2-bulma-dashboard/src/dashboard.html
+++ b/sesion05/2-bulma-dashboard/src/dashboard.html
@@ -13,7 +13,7 @@
   <nav class="navbar has-shadow">
     <div class="navbar-brand">
       <a href="#" class="navbar-item">
-        <img src="images/user.png" alt="brand image">
+        <img src="http://mygroupbd.com/images/mycl_new_logo.jpg" alt="brand image">
       </a>
       <div class="navbar-burger">
         <span></span>
@@ -90,7 +90,8 @@
             </li>
           </ul>
         </nav>
-      </div><!--[end] left site menu-->
+      </div>
+      <!--[end] left site menu-->
       <!--right side: main section-->
       <div class="column">
         <div class="level">
@@ -114,10 +115,135 @@
           </div>
         </div>
         <div class="columns is-multiline">
-          <div class="column is-12-tablet is-6-desktop is-3-widescreen">1</div>
-          <div class="column is-12-tablet is-6-desktop is-3-widescreen">2</div>
-          <div class="column is-12-tablet is-6-desktop is-3-widescreen">3</div>
-          <div class="column is-12-tablet is-6-desktop is-3-widescreen">4</div>
+          <!-- summary -->
+          <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="notification is-link has-text">
+              <p class="title is-1">234</p>
+              <p class="subtitle is-4">Orders</p>
+            </div>
+          </div>
+          <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="notification is-info has-text">
+              <p class="title is-1">$9,876</p>
+              <p class="subtitle is-4">Revenue</p>
+            </div>
+          </div>
+          <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="notification is-primary has-text">
+              <p class="title is-1">8,765</p>
+              <p class="subtitle is-4">Visitors</p>
+            </div>
+          </div>
+          <div class="column is-12-tablet is-6-desktop is-3-widescreen">
+            <div class="notification is-success has-text">
+              <p class="title is-1">76,543</p>
+              <p class="subtitle is-4">Pageviews</p>
+            </div>
+          </div>
+          <!-- [end] summary -->
+          <!-- orders -->
+          <div class="column is-12-tablet is-6-desktop is-4-fullhd">
+            <div class="card">
+              <div class="card-content">
+                <h2 class="title is-4">Last orders</h2>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-5 is-marginless"><a href="#">98765</a></p>
+                      <small>Jan 11, 8:59 by <a href="#">Ethien Salinas</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-5 is-marginless">$65.43</p>
+                      <span class="tag is-warning">In progress</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-5 is-marginless"><a href="#">87654</a></p>
+                      <small>Jan 11, 8:59 by <a href="#">Sara Domínguez</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-5 is-marginless">$54.32</p>
+                      <span class="tag is-success">Successful</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="level">
+                  <div class="level-left">
+                    <div>
+                      <p class="title is-5 is-marginless"><a href="#">76543</a></p>
+                      <small>Jan 11, 8:59 by <a href="#">Libna Ponce</a></small>
+                    </div>
+                  </div>
+                  <div class="level-right">
+                    <div class="has-text-right">
+                      <p class="title is-5 is-marginless">$32.31</p>
+                      <span class="tag is-danger">Failed</span>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="button is-link is-outlined">View all orders</a>
+              </div>
+            </div>
+          </div>
+          <!-- most popular books -->
+          <div class="column is-12-tablet is-6-desktop is-4-fullhd">
+            <div class="card">
+              <div class="card-content">
+                <h2 class="title is-4">Most popular books</h2>
+                <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">1</p>
+                  </div>
+                  <div class="media-left">
+                    <img src="https://covers.oreillystatic.com/images/0636920083566/lrg.jpg" alt="" width="40px">
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-5 is-spaced">
+                      <a href="#">Learning Swift</a>
+                    </p>
+                  </div>
+                  <div class="media-right">321 sold</div>
+                </div>
+                <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">2</p>
+                  </div>
+                  <div class="media-left">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/41IhVboK7KL.jpg" alt="" width="40px">
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-5 is-spaced">
+                      <a href="#">Learning Docker</a>
+                    </p>
+                  </div>
+                  <div class="media-right">321 sold</div>
+                </div>
+                <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">3</p>
+                  </div>
+                  <div class="media-left">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX5fOI9ZU95hGPF05yHvzycIpILfAxg8yjCGwMbOqmmYZx9bD3QQ&s"
+                      alt="" width="40px">
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-5 is-spaced">
+                      <a href="#">Learning Javascript</a>
+                    </p>
+                  </div>
+                  <div class="media-right">321 sold</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
