--- a/sesion05/2-bulma-dashboard/src/dashboard.html
+++ b/sesion05/2-bulma-dashboard/src/dashboard.html
@@ -241,6 +241,26 @@
                   </div>
                   <div class="media-right">321 sold</div>
                 </div>
+                <a href="#" class="button is-link is-outlined">View all books</a>
+              </div>
+            </div>
+          </div>
+          <!-- most loyal customers -->
+          <div class="column is-12-tablet is-6-desktop is-4-fullhd">
+            <div class="card">
+              <div class="card-content">
+                <h2 class="title is-4">Most loyal customers</h2>
+                <div class="media">
+                  <div class="media-left is-marginless">
+                    <p class="number">1</p>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-5 is-spaced"><a href="#">Ariadna Espinosa</a></p>
+                    <p class="subtitle is-6">México</p>
+                  </div>
+                  <div class="media-right">12 orders</div>
+                </div>
+                <a href="#" class="button is-link is-outlined">View all customers</a>
               </div>
             </div>
           </div>
