[add] index links

--- a/sesion07/hello-vue/src/index.html
+++ b/sesion07/hello-vue/src/index.html
@@ -12,5 +12,7 @@
     <a href="./2-vue-if.html">Vue IF</a>
     <a href="./3-vue-for.html">Vue For</a>
     <a href="./4-vue-component.html">Vue Component</a>
+    <a href="./5-vue-methods.html">Vue Methods</a>
+    <a href="./6-vue-challenge.html">Challenge</a>
 </body>
 </html>
