--- a/sesion10/hello-react/src/index.html
+++ b/sesion10/hello-react/src/index.html
@@ -12,8 +12,12 @@
     <h1>Hello React</h1>
     <a href="./1-hello.html">React CDN</a>
     <a href="./2-component.html">Component</a>
+    <a href="./2.1-functional-component.html">Functional Component</a>
     <a href="./3-props.html">Props</a>
     <a href="./4-state-and-lifecycle.html">State and lifecycle</a>
+    <a href="./5-state-challenge.html">State and lifecycle Challenge</a>
+    <a href="./6-event-handler.html">Event Listener</a>
+    <a href="./7-conditional-rendering.html">Conditional Rendering</a>
 </body>
 
 </html>
